--- a/tasks.json
+++ b/tasks.json
@@ -1,40 +1,52 @@
 {
   "tasks": [
     {
-      "taskName": "fdg",
-      "description": "dsfsd",
+      "taskName": "Task first",
+      "description": "going to gym",
+      "dueDate": "2023-12-24",
+      "id": 1
+    },
+    {
+      "taskName": "task 2",
+      "description": "making juice",
+      "dueDate": "2023-12-25",
+      "id": 2
+    },
+    {
+      "taskName": "task 3",
+      "description": "Making food",
+      "dueDate": "2023-12-26",
+      "id": 3
+    },
+    {
+      "taskName": "task 4",
+      "description": "wakeup early",
+      "dueDate": "2023-12-24",
+      "id": 4
+    },
+    {
+      "taskName": "task 5",
+      "description": "celebrate a my day ",
+      "dueDate": "2023-12-26",
+      "id": 5
+    },
+    {
+      "taskName": "Submit my project ",
+      "description": "Thanks Som Here",
+      "dueDate": "2023-12-24",
+      "id": 6
+    },
+    {
+      "taskName": "doing my work",
+      "description": "hello som here",
+      "dueDate": "2023-12-27",
+      "id": 7
+    },
+    {
+      "taskName": "hello",
+      "description": "hey just testing",
       "dueDate": "2023-12-29",
-      "id": "VMXWphO"
-    },
-    {
-      "taskName": "serdfsd",
-      "description": "dsfsdfdsf\\sdjxgh\\sbn xclks\\jxkc",
-      "dueDate": "2023-12-02",
-      "id": "kWSz--e"
-    },
-    {
-      "taskName": "helllo ",
-      "description": "today i will do something new here",
-      "dueDate": "2023-11-30",
-      "id": "0U375rw"
-    },
-    {
-      "taskName": "helllo moye moye",
-      "description": "moye moyeeee moyeeeeeeeee",
-      "dueDate": "2023-11-10",
-      "id": "9NTnx8I"
-    },
-    {
-      "taskName": "test sds",
-      "description": "tstkdnxuh DKHD SDSN AS",
-      "dueDate": "2023-12-31",
-      "id": "TXuCqp_"
-    },
-    {
-      "taskName": "sadjhk",
-      "description": "asdjhasdj",
-      "dueDate": "2023-12-23",
-      "id": "PtquRkA"
+      "id": 8
     }
   ],
   "comments": [],
