reverse the task list

--- a/tasks.json
+++ b/tasks.json
@@ -47,6 +47,12 @@
       "description": "hey just testing",
       "dueDate": "2023-12-29",
       "id": 8
+    },
+    {
+      "taskName": "weruwqehw",
+      "description": "sdfas",
+      "dueDate": "2023-12-28",
+      "id": 9
     }
   ],
   "comments": [],
