--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.2.10",
     "apexcharts": "^3.45.1",
     "bootstrap": "^5.3.2",
+    "json-server": "^0.17.4",
     "ng-apexcharts": "^1.8.0",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.10.1",
